# python-dev-template

./: .gitignore  README.md  Taskfile.yaml  mise.toml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Docker/: docker-compose.yml
src/: hello.py
