[project]
name = "python-dev-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[dependency-groups]
dev = [
    "ruff>=0.9.6",
]

[tool.ruff]
# 1行あたりの最大文字数を120文字に設定
line-length = 120

# 検査対象から除外するディレクトリやファイルを指定
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
]

[tool.ruff.format]
# docstring内のコードブロックをフォーマットする
docstring-code-format = true

[tool.ruff.lint]
# すべてのルールを有効化
select = ["ALL"]
# 以下のルールは無視する
# T201: print文の使用を禁止するルール
# COM812: トレーリングカンマに関するルール
# ISC001: 暗黙的文字列連結に関するルール
ignore = [
    "T201",
    "COM812",
    "ISC001",
]
# 自動修正を適用しないルール
# F401: 未使用のインポート
# F841: 未使用の変数
unfixable = [
    "F401",
    "F841",
]
# docstringのスタイルをGoogle形式に設定
pydocstyle.convention = "google" 

[tool.ruff.lint.per-file-ignores]
# テストファイルに対する特別なルール除外設定
# D: ドキュメント関連のすべてのルール
# S101: assertの使用を許可
# N802: 関数名の命名規則
# ARG: 関数の引数に関するルール
"tests/**/*.py" = [
    "D",
    "S101",
    "N802",
    "ARG",
]

[tool.ruff.lint.pylint]
# 関数の最大引数数を6個に制限
max-args = 6